--- a/databaseconnection.ipynb
+++ b/databaseconnection.ipynb
@@ -51,8 +51,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "# Set environment variables\n",
     "os.environ['PSQL_DB_HOST'] = 'haiti-data.cgz5ttlgvxan.us-east-2.rds.amazonaws.com'\n",
     "os.environ['PSQL_DB_USER'] = 'secret'\n",
@@ -63,7 +61,8 @@
     "os.environ['AWS_ACCESS_KEY']=\"AKIARXPRANH44ZL5OJ4C\"\n",
     "os.environ['AWS_SECRET_ACCESS_KEY']=\"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\"\n",
     "os.environ['USERNAME']=\"yvel\"\n",
-    "os.environ['PASSWORD']=\"jump604music2374video\""
+    "os.environ['PASSWORD']=\"jump604music2374video\"\n",
+    "\n"
    ]
   },
   {
