--- a/databaseconnection.ipynb
+++ b/databaseconnection.ipynb
@@ -1,27 +1,4 @@
 {
- "nbformat": 4,
- "nbformat_minor": 2,
- "metadata": {
-  "language_info": {
-   "name": "python",
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "version": "3.8.2-final"
-  },
-  "orig_nbformat": 2,
-  "file_extension": ".py",
-  "mimetype": "text/x-python",
-  "name": "python",
-  "npconvert_exporter": "python",
-  "pygments_lexer": "ipython3",
-  "version": 3,
-  "kernelspec": {
-   "name": "python38232bit1061edd897c34bc9bde6683b5eabcb5f",
-   "display_name": "Python 3.8.2 32-bit"
-  }
- },
  "cells": [
   {
    "cell_type": "code",
@@ -509,10 +486,88 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tranlator = pd.read_csv('translation/translate1.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tranlator.set_index('name',inplace =True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tranlator.to_json('translation/translator.json')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "                                                                            en  \\\nname                                                                             \nsite_name                                             Health Systems Dashboard   \nhome                                                                      Home   \nmap                                                            Interactive Map   \ndashboard                                                            Dashboard   \ntotal_site                                         Number of Health Facilities   \ndept                                                                Department   \ncom                                                                    Commune   \nall_sites                                              Total Health Facilities   \nhospital                                                              Hospital   \nfac_with_bed                                            Health Center With Bed   \nfac_without_bed                                      Health Center Without Bed   \ndispensary                                                          Dispensary   \ntable_tilte                    Number of health facilities\\n per 10,000 people   \ndepartement                                                         Department   \nhealth_fac                                                                 NaN   \npopulation                                                          Population   \ndensity                                Health Facilities per 10,000 population   \nlegend_title                                   Number of health facilities per   \nbutton_1_text                                                           Submit   \nbutton_2_text                                                        Reset map   \nright                                   All rights reserved to Ayiti Analytics   \nPurpose                      This tool exists to provide reliable informati...   \nPurpose1                     The health systems dashboard \\ngenerates relia...   \nPurspose2                    The number of health facilities (countrywide a...   \nPurspose3                                The number of hospital beds available   \nDefinitions                  In the tool, you’ll also find Health Care Faci...   \nDefinitions1                                            Health Care Facilities   \nDefinitions1.1                                                        With Bed   \nDefinitions1.2                                                     Without Bed   \nDefinitions1.3                                                        Hospital   \nDefinitions1.4                                                          Clinic   \nDefinitions2                                    Health Care Facilities by type   \nDefinitions2.1                                                         Private   \nDefinitions2.3                                        Mixed Private and Public   \nDefinitions2.4                                         NGO Heath Care Facility   \nDefinitions3                 You will also find resource availability relat...   \nDefinitions3.1                   Number of health facilities per 10,000 people   \nDefinitions3.2               Number of in-patient beds available per 10,000...   \nDefinitions3.3               Number of core health workers available per 10...   \nDatasources                  Facility data are reported from the 2017-2018 ...   \nDataStrengthsandLimitations  The Demographic and Health Survey interviewers...   \nRight                                                                      NaN   \ntooltip_dep                                                        Departement   \ntooltip_com                                                            Commune   \n\n                                                                            kr  \\\nname                                                                             \nsite_name                                                      Zouti Laswenyaj   \nhome                                                                  Paj Akèy   \nmap                                                             Kat entèraktif   \ndashboard                                                                Tablo   \ntotal_site                                                  Kantite sant sante   \ndept                                                                  Depatman   \ncom                                                                      Komin   \nall_sites                                                   Tout Sant Sante yo   \nhospital                                                               Lopital   \nfac_with_bed                                            Sant sante avèk Kabann   \nfac_without_bed                                         Sant  sante san kabann   \ndispensary                                                            Dispansè   \ntable_tilte                           Tablo dansite sant sante pou 10 000 moun   \ndepartement                                                           Depatman   \nhealth_fac                                                  Kantite sant sante   \npopulation                                                          Popilasyon   \ndensity                                             Sant sante pou 10,000 moun   \nlegend_title                                        Distribisyon sant sante pa   \nbutton_1_text                                                            Lanse   \nbutton_2_text                                                   relanse kat la   \nright                                          Ayiti Analytics rezève tout dwa   \nPurpose                      Ayiti Analytics devlope Zouti sila nan objekti...   \nPurpose1                     Zouti sila pèmèt nou jwenn pou yon popilasyon ...   \nPurspose2                                Gwosè ak kantite sant sante ki genyen   \nPurspose3                                     Kantite kabann lopital ki genyen   \nDefinitions                               Resous ak jefò laswenyaj ki disponib   \nDefinitions1                               Definisyon sant ki bay laswenyaj yo   \nDefinitions1.1                      Sant sante ki bay laswenyaj yo divize an :   \nDefinitions1.2                                          Sant sante pa kategori   \nDefinitions1.3                                                         Lopital   \nDefinitions1.4                                                      Sant sante   \nDefinitions2                                                 Sant sante pa tip   \nDefinitions2.1                                                Sant sante prive   \nDefinitions2.3                                  Sant sant mixte (prive + leta)   \nDefinitions2.4                                               Sant sante ONG yo   \nDefinitions3                 Avèk tout infòmasyon sila yo nou kakile kijan ...   \nDefinitions3.1               Kantite sant sante pou 10 000 moun nan lokalit...   \nDefinitions3.2                  Kantite kabann pou 10 000 moun nan lokalite yo   \nDefinitions3.3               Kantite pwofesyonel sante pou 10 000 moun nan ...   \nDatasources                  Sous done sa yo repòte nan resansman nan ane 2...   \nDataStrengthsandLimitations  Institut Haïtien de l’Enfance IHE and ICF. 201...   \nRight                        Ayiti Analytics rezève tout dwa © pou travay sila   \ntooltip_dep                                                           Depatman   \ntooltip_com                                                              Komin   \n\n                             fr  \nname                             \nsite_name                   NaN  \nhome                        NaN  \nmap                         NaN  \ndashboard                   NaN  \ntotal_site                  NaN  \ndept                        NaN  \ncom                         NaN  \nall_sites                   NaN  \nhospital                    NaN  \nfac_with_bed                NaN  \nfac_without_bed             NaN  \ndispensary                  NaN  \ntable_tilte                 NaN  \ndepartement                 NaN  \nhealth_fac                  NaN  \npopulation                  NaN  \ndensity                     NaN  \nlegend_title                NaN  \nbutton_1_text               NaN  \nbutton_2_text               NaN  \nright                       NaN  \nPurpose                     NaN  \nPurpose1                    NaN  \nPurspose2                   NaN  \nPurspose3                   NaN  \nDefinitions                 NaN  \nDefinitions1                NaN  \nDefinitions1.1              NaN  \nDefinitions1.2              NaN  \nDefinitions1.3              NaN  \nDefinitions1.4              NaN  \nDefinitions2                NaN  \nDefinitions2.1              NaN  \nDefinitions2.3              NaN  \nDefinitions2.4              NaN  \nDefinitions3                NaN  \nDefinitions3.1              NaN  \nDefinitions3.2              NaN  \nDefinitions3.3              NaN  \nDatasources                 NaN  \nDataStrengthsandLimitations NaN  \nRight                       NaN  \ntooltip_dep                 NaN  \ntooltip_com                 NaN  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>en</th>\n      <th>kr</th>\n      <th>fr</th>\n    </tr>\n    <tr>\n      <th>name</th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>site_name</th>\n      <td>Health Systems Dashboard</td>\n      <td>Zouti Laswenyaj</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>home</th>\n      <td>Home</td>\n      <td>Paj Akèy</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>map</th>\n      <td>Interactive Map</td>\n      <td>Kat entèraktif</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>dashboard</th>\n      <td>Dashboard</td>\n      <td>Tablo</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>total_site</th>\n      <td>Number of Health Facilities</td>\n      <td>Kantite sant sante</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>dept</th>\n      <td>Department</td>\n      <td>Depatman</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>com</th>\n      <td>Commune</td>\n      <td>Komin</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>all_sites</th>\n      <td>Total Health Facilities</td>\n      <td>Tout Sant Sante yo</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>hospital</th>\n      <td>Hospital</td>\n      <td>Lopital</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>fac_with_bed</th>\n      <td>Health Center With Bed</td>\n      <td>Sant sante avèk Kabann</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>fac_without_bed</th>\n      <td>Health Center Without Bed</td>\n      <td>Sant  sante san kabann</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>dispensary</th>\n      <td>Dispensary</td>\n      <td>Dispansè</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>table_tilte</th>\n      <td>Number of health facilities\\n per 10,000 people</td>\n      <td>Tablo dansite sant sante pou 10 000 moun</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>departement</th>\n      <td>Department</td>\n      <td>Depatman</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>health_fac</th>\n      <td>NaN</td>\n      <td>Kantite sant sante</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>population</th>\n      <td>Population</td>\n      <td>Popilasyon</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>density</th>\n      <td>Health Facilities per 10,000 population</td>\n      <td>Sant sante pou 10,000 moun</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>legend_title</th>\n      <td>Number of health facilities per</td>\n      <td>Distribisyon sant sante pa</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>button_1_text</th>\n      <td>Submit</td>\n      <td>Lanse</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>button_2_text</th>\n      <td>Reset map</td>\n      <td>relanse kat la</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>right</th>\n      <td>All rights reserved to Ayiti Analytics</td>\n      <td>Ayiti Analytics rezève tout dwa</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>Purpose</th>\n      <td>This tool exists to provide reliable informati...</td>\n      <td>Ayiti Analytics devlope Zouti sila nan objekti...</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>Purpose1</th>\n      <td>The health systems dashboard \\ngenerates relia...</td>\n      <td>Zouti sila pèmèt nou jwenn pou yon popilasyon ...</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>Purspose2</th>\n      <td>The number of health facilities (countrywide a...</td>\n      <td>Gwosè ak kantite sant sante ki genyen</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>Purspose3</th>\n      <td>The number of hospital beds available</td>\n      <td>Kantite kabann lopital ki genyen</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>Definitions</th>\n      <td>In the tool, you’ll also find Health Care Faci...</td>\n      <td>Resous ak jefò laswenyaj ki disponib</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>Definitions1</th>\n      <td>Health Care Facilities</td>\n      <td>Definisyon sant ki bay laswenyaj yo</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>Definitions1.1</th>\n      <td>With Bed</td>\n      <td>Sant sante ki bay laswenyaj yo divize an :</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>Definitions1.2</th>\n      <td>Without Bed</td>\n      <td>Sant sante pa kategori</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>Definitions1.3</th>\n      <td>Hospital</td>\n      <td>Lopital</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>Definitions1.4</th>\n      <td>Clinic</td>\n      <td>Sant sante</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>Definitions2</th>\n      <td>Health Care Facilities by type</td>\n      <td>Sant sante pa tip</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>Definitions2.1</th>\n      <td>Private</td>\n      <td>Sant sante prive</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>Definitions2.3</th>\n      <td>Mixed Private and Public</td>\n      <td>Sant sant mixte (prive + leta)</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>Definitions2.4</th>\n      <td>NGO Heath Care Facility</td>\n      <td>Sant sante ONG yo</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>Definitions3</th>\n      <td>You will also find resource availability relat...</td>\n      <td>Avèk tout infòmasyon sila yo nou kakile kijan ...</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>Definitions3.1</th>\n      <td>Number of health facilities per 10,000 people</td>\n      <td>Kantite sant sante pou 10 000 moun nan lokalit...</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>Definitions3.2</th>\n      <td>Number of in-patient beds available per 10,000...</td>\n      <td>Kantite kabann pou 10 000 moun nan lokalite yo</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>Definitions3.3</th>\n      <td>Number of core health workers available per 10...</td>\n      <td>Kantite pwofesyonel sante pou 10 000 moun nan ...</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>Datasources</th>\n      <td>Facility data are reported from the 2017-2018 ...</td>\n      <td>Sous done sa yo repòte nan resansman nan ane 2...</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>DataStrengthsandLimitations</th>\n      <td>The Demographic and Health Survey interviewers...</td>\n      <td>Institut Haïtien de l’Enfance IHE and ICF. 201...</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>Right</th>\n      <td>NaN</td>\n      <td>Ayiti Analytics rezève tout dwa © pou travay sila</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>tooltip_dep</th>\n      <td>Departement</td>\n      <td>Depatman</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>tooltip_com</th>\n      <td>Commune</td>\n      <td>Komin</td>\n      <td>NaN</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 18
+    }
+   ],
+   "source": [
+    "tranlator"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
   }
- ]
+ ],
+ "metadata": {
+  "language_info": {
+   "name": "python",
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "version": "3.8.2-final"
+  },
+  "orig_nbformat": 2,
+  "file_extension": ".py",
+  "mimetype": "text/x-python",
+  "name": "python",
+  "npconvert_exporter": "python",
+  "pygments_lexer": "ipython3",
+  "version": 3,
+  "kernelspec": {
+   "name": "python38232bit1061edd897c34bc9bde6683b5eabcb5f",
+   "display_name": "Python 3.8.2 32-bit"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
 }
