Last text modification

--- a/translation/translator.json
+++ b/translation/translator.json
@@ -4,7 +4,7 @@
         "home":"Home",
         "map":"Interactive Map",
         "dashboard":"Dashboard",
-        "total_site":"Number of Health Facilities",
+        "total_site":"Total of Health Facilities",
         "dept":"Department",
         "com":"Commune",
         "all_sites":"Total Health Facilities",
@@ -13,11 +13,11 @@
         "fac_without_bed":"Health Center Without Bed",
         "dispensary":"Dispensary",
         "table_tilte":"Number of health facilities\n per 10,000 people",
-        "departement":"Departments",
+        "departement":"Department",
         "commune":"Communes",
-        "health_fac":"Total Health Facilities",
+        "health_fac":"Health Facilities",
         "population":"Population",
-        "density":"Health Facilities per 10,000 population",
+        "density":"Health Facilities per 10,000 people",
         "legend_title":"Number of health facilities per",
         "button_1_text":"Submit",
         "ressetbutton":"Reset map",
@@ -31,12 +31,13 @@
         "definition_header": "Definition",
         "definition":"In the tool, you\u2019ll also find Health Care Facilities that we have categorized by",
         "definition1":"Health Care Facilities",
-        "definition1_1":"With Bed",
-        "definition1_2":"Without Bed",
-        "definition1_3":"Hospital",
-        "definition1_4":"Clinic",
+        "definition1_1":"With Beds",
+        "definition1_2":"Without Beds",
+        "definition1_3":"Hospitals",
+        "definition1_4":"Clinics",
         "definition2":"Health Care Facilities by type",
         "definition2_1":"Private",
+        "definition2_2":"Public",
         "definition2_3":"Mixed Private and Public",
         "definition2_4":"NGO Heath Care Facility",
         "definition3":"You will also find resource availability relative to the population:",
@@ -50,7 +51,7 @@
         "reference_text": "Institut Haïtien de l’Enfance IHE and ICF. 2019. Évaluation de la Prestation des Services de Soins de Santé, Haïti, 2017-2018. Rockville, Maryland, USA : IHE and ICF. (Link) Institut Haïtien de l’Enfance  IHE and ICF. 2018. Enquête Mortalité, Morbidité et Utilisation des Services - EMMUS-VI 2016-2017 Pétion-Ville, Haïti, et Rockville, Maryland, USA : IHE et ICF. (Link) Institut Haïtien de Statistique et d’Informatique (IHSI). Projections de la population Haitienne 2018. (Link)",
         "reference1": "Institut Haïtien de l’Enfance IHE and ICF. 2019. Évaluation de la Prestation des Services de Soins de Santé, Haïti, 2017-2018.",
         "reference2": "Institut Haïtien de l’Enfance  IHE and ICF. 2018. Enquête Mortalité, Morbidité et Utilisation des Services - EMMUS-VI 2016-2017.",
-        "reference3":"Institut Haïtien de l’Enfance  IHE and ICF. 2018. Enquête Mortalité, Morbidité et Utilisation des Services - EMMUS-VI 2016-2017.",
+        "reference3":"Institut Haïtien de Statistique et d'Informatique (IHSI). Projections de la population Haitienne 2018.",
         "tooltip_dep":"Departement",
         "tooltip_com":"Commune"
 
@@ -93,7 +94,8 @@
         "definition1_4":"Dispansè",
         "definition2":"Sant sante pa tip",
         "definition2_1":"Sant sante prive",
-        "definition2_3":"Sant sant mixte (prive + leta)",
+        "definition2_2":"Piblik",
+        "definition2_3":"Sant sant mixte (prive + piblik)",
         "definition2_4":"Sant sante ONG yo",
         "definition3":"Av\u00e8k tout inf\u00f2masyon sila yo nou kakile kijan sant sante sila yo epapiye e konbyen moun sant yo des\u00e8vi nan komin oubyen depatman yo tankou:",
         "definition3_1":"Kantite sant sante pou 10 000 moun nan lokalite yo",
@@ -106,7 +108,7 @@
         "reference_text": "Institut Haïtien de l’Enfance IHE and ICF. 2019 Évaluation de la Prestation des Services de Soins de Santé, Haïti, 2017-2018. Rockville, Maryland, USA : IHE and ICF. (Link) Institut Haïtien de l’Enfance  IHE and ICF. 2018. Enquête Mortalité, Morbidité et Utilisation des Services - EMMUS-VI 2016-2017 Pétion-Ville, Haïti, et Rockville, Maryland, USA : IHE et ICF. (Link) Institut Haïtien de Statistique et d’Informatique (IHSI). Projections de la population Haitienne 2018. (Link)",
         "reference1": "Institut Haïtien de l’Enfance IHE and ICF. 2019. Évaluation de la Prestation des Services de Soins de Santé, Haïti, 2017-2018.",
         "reference2": "Institut Haïtien de l’Enfance  IHE and ICF. 2018. Enquête Mortalité, Morbidité et Utilisation des Services - EMMUS-VI 2016-2017.",
-        "reference3":"Institut Haïtien de l’Enfance  IHE and ICF. 2018. Enquête Mortalité, Morbidité et Utilisation des Services - EMMUS-VI 2016-2017.",
+        "reference3":"Institut Haïtien de Statistique et d'Informatique (IHSI). Projections de la population Haitienne 2018.",
         "Right":"<a href=\"https://www.ayitianalytics.org/\"  target=\"_blank\">Ayiti Analytics </a> rez\u00e8ve tout dwa \u00a9 pou travay sila",
         "tooltip_dep":"Depatman",
         "tooltip_com":"Komin"
