--- a/translation/translator.json
+++ b/translation/translator.json
@@ -4,7 +4,7 @@
         "home":"Home",
         "map":"Interactive Map",
         "dashboard":"Dashboard",
-        "total_site":"Total of Health Facilities",
+        "total_site":"Total Health Facilities",
         "dept":"Department",
         "com":"Commune",
         "all_sites":"Total Health Facilities",
@@ -19,7 +19,7 @@
         "population":"Population",
         "density":"Health Facilities per 10,000 people",
         "legend_title":"Number of health facilities per",
-        "button_1_text":"Submit",
+        "button_1_text":"Launch",
         "ressetbutton":"Reset map",
         "right":"All rights reserved to <a href=\"https://www.ayitianalytics.org/\"  target=\"_blank\">Ayiti Analytics </a>",
         "purpose_header":"Purpose",
