chnages some text in translation

--- a/translation/translator.json
+++ b/translation/translator.json
@@ -23,11 +23,11 @@
         "ressetbutton":"Reset map",
         "right":"All rights reserved to <a href=\"https://www.ayitianalytics.org/\"  target=\"_blank\">Ayiti Analytics </a>",
         "purpose_header":"Purpose",
-        "purpose":"This tool exists to provide reliable information on health care services in Haiti, focusing specifically on the number and distribution of health facilities and health care resources in the country. The data can be disaggregated by facility type, district, and, where data are available, by relevant socioeconomic factors.",
+        "purpose":"This tool exists to provide reliable information on health care services in Haiti, focusing specifically on the number and distribution of health facilities and health care resources in the country. The data can be disaggregated by facility type, and where data are available, by relevant socioeconomic factors.",
         "purpose1":"The health systems dashboard generates reliable information on:",
-        "purpose1_1":"The number of health facilities (countrywide and by administrative districts)",
-        "purpose1_2":"The number of hospital beds available",
-        "purpose1_3":"The number of full-time health care workers ",
+        "purpose1_1":"The number of health facilities in every Department and City",
+        "purpose1_2":"The number of hospital beds availableNumber of hospital beds available for the population per Department and City",
+        "purpose1_3":"Number of health workers for the population per Department and City",
         "definition_header": "Definition",
         "definition":"In the tool, you\u2019ll also find Health Care Facilities that we have categorized by",
         "definition1":"Health Care Facilities",
@@ -44,7 +44,7 @@
         "definition3_1":"Number of health facilities per 10,000 people",
         "definition3_2":"Number of in-patient beds available per 10,000 people",
         "definition3_3":"Number of core health workers available per 10,000 people",
-        "datasource_header":"Datasources",
+        "datasource_header":"Data Sources",
         "datasource":"Facility data are reported from the 2017-2018 Service Provision Assessment (SPA) survey in Haiti, a nationally representative survey of health facilities developed by USAID\n and implemented in partnership with the Institut Ha\u00eftien de l\u2019Enfance (IHE) and the Minist\u00e8re de la Sant\u00e9 Publique et de la Population (MSPP). Socioeconomic and demographic data are from \nthe Demographic and Health Survey 2016-2017 (Enqu\u00eate Mortalit\u00e9, Morbidit\u00e9 et Utilisation des Services (EMMUS-VI) 2016-2017). Population data are from the most recent census and 2018 \npopulation projections from the Haitian Institute of Statistics (Institut Ha\u00eftien de Statistique et d'Informatique).",
         "DataStrengthsandLimitations":"The Demographic and Health Survey interviewers are trained to collect the most accurate data as possible. However, difficulties in identifying facilities that are not registered can result in undercounting.",
         "reference_header": "References",
