--- a/translation/translator.json
+++ b/translation/translator.json
@@ -9,8 +9,8 @@
         "com":"Commune",
         "all_sites":"Total Health Facilities",
         "hospital":"Hospital",
-        "fac_with_bed":"Health Center With Bed",
-        "fac_without_bed":"Health Center Without Bed",
+        "fac_with_bed":"Health Center With Beds",
+        "fac_without_bed":"Health Center Without Beds",
         "dispensary":"Dispensary",
         "table_tilte":"Number of health facilities\n per 10,000 people",
         "departement":"Department",
@@ -25,8 +25,8 @@
         "purpose_header":"Purpose",
         "purpose":"This tool exists to provide reliable information on health care services in Haiti, focusing specifically on the number and distribution of health facilities and health care resources in the country. The data can be disaggregated by facility type, and where data are available, by relevant socioeconomic factors.",
         "purpose1":"The health systems dashboard generates reliable information on:",
-        "purpose1_1":"The number of health facilities in every Department and City",
-        "purpose1_2":"The number of hospital beds availableNumber of hospital beds available for the population per Department and City",
+        "purpose1_1":"Number of health facilities in every Department and City",
+        "purpose1_2":"Number of hospital beds available for the population per Department and City",
         "purpose1_3":"Number of health workers for the population per Department and City",
         "definition_header": "Definition",
         "definition":"In the tool, you\u2019ll also find Health Care Facilities that we have categorized by",
